# gecko-dev

./: Cargo.toml
.cargo/: config.in  config.toml.in
browser/app/profile/: firefox.js
browser/base/content/: browser-sync.js  tabbrowser.js
browser/components/: BrowserGlue.sys.mjs
browser/components/firefoxview/: firefox-view-tabs-setup-manager.sys.mjs
browser/themes/shared/customizableui/: panelUI-shared.css
services/fxaccounts/: FxAccountsCommands.sys.mjs  FxAccountsCommon.sys.mjs  moz.build
services/fxaccounts/device_commands/: RemoteTabs.sys.mjs
services/sync/modules/: engines.sys.mjs  telemetry.sys.mjs
services/sync/modules/engines/: history.sys.mjs  passwords.sys.mjs  tabs.js  tabs.sys.mjs
services/sync/tests/tps/: test_bug535326.js  test_privbrw_tabs.js  test_special_tabs.js
services/sync/tests/unit/: test_engine_changes_during_sync.js  test_history_engine.js  test_password_engine.js  test_password_store.js  test_password_validator.js  test_syncengine_sync.js  test_telemetry.js
toolkit/components/: moz.build
toolkit/components/appservices/tabs_bridge/: Cargo.toml
toolkit/components/appservices/tabs_bridge/src/: area.rs  error.rs  faketab_storage.rs  lib.rs  store.rs
toolkit/components/passwordmgr/: LoginHelper.sys.mjs  storage-json.sys.mjs
toolkit/components/places/: History.cpp  History.sys.mjs  PlacesUtils.sys.mjs  nsPlacesTables.h
toolkit/components/uniffi-bindgen-gecko-js/: config.toml
toolkit/components/uniffi-js/: UniFFIFixtureScaffolding.cpp  UniFFIGeneratedScaffolding.cpp
(+4 files in other folders)
