[package]
name = "tabs_bridge"
description = "The Bridge between application services tabs component and desktop"
version = "0.1.0"
authors = ["The Firefox Sync Developers <sync-team@mozilla.com>"]
edition = "2021"

[dependencies]
atomic_refcell = "0.1"
cstr = "0.2"
golden_gate = { path = "../../../../services/sync/golden_gate" }
interrupt-support = "0.1"
moz_task = { path = "../../../../xpcom/rust/moz_task" }
nserror = { path = "../../../../xpcom/rust/nserror" }
nsstring = { path = "../../../../xpcom/rust/nsstring" }
once_cell = "1"
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
xpcom = { path = "../../../../xpcom/rust/xpcom" }
serde = "1"
serde_json = "1"
storage_variant = { path = "../../../../storage/variant" }
sql-support = "0.1"
tabs = "0.1"